--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: custom-cluster       # Name of your chart
+name: ODP-cluster       # Name of your chart
 description: A Helm chart for deploying the custom cluster
 version: 1.0.0             # Version of the chart
 appVersion: "1.0"          # Version of the application (optional)
