--- a/sample_Values.yml
+++ b/sample_Values.yml
@@ -11,9 +11,9 @@
 image: sehajsandhu/odp_rl8_py311:v1
 nodes: 3                               # Upto 4 nodes
 components: ""                         # "AMBARI,HDFS,ZOOKEEPER,YARN,MAP-REDUCE,INFRA-SOLR,HIVE,TEZ,HBASE,SQOOP,RANGER,RANGER-KMS,DRUID,SPARK2,OOZIE"
-ambariVersion: ""
-ambariUrl: ""
-odpVersion: ""
-odpUrl: ""          
-jdkVersion: ""                         # 8 or 11
-kerberos: ""                           # YES or No
+ambariVersion: "2.7.9.0-1"
+ambariUrl: "https://mirror.odp.acceldata.dev/ODP/rhel/Ambari-2.7.9.0-1/"
+odpVersion: "3.3.6.0-1"
+odpUrl: "https://mirror.odp.acceldata.dev/ODP/rhel/3.3.6.0-1/"          
+jdkVersion: "11"                         # 8 or 11
+kerberos: "Yes"                           # Yes or No
