added resource configs and DC replica server

--- a/sample_Values.yml
+++ b/sample_Values.yml
@@ -13,8 +13,18 @@ image: sehajsandhu/odp_rl8_py311:v1
 nodes: 3                               # Upto 4 nodes
 components: ""                         # "AMBARI,HDFS,ZOOKEEPER,YARN,MAP-REDUCE,INFRA-SOLR,HIVE,TEZ,HBASE,SQOOP,RANGER,RANGER-KMS,DRUID,SPARK2,OOZIE"
 ambariVersion: "2.7.9.0-1"
-ambariUrl: "https://mirror.odp.acceldata.dev/ODP/rhel/Ambari-2.7.9.0-1/"
+ambariUrl: "http://10.100.6.15/ODP/rhel/Ambari-2.7.9.0-1/"      ## KEEP IN MIND TO REPLACE https://MIRROR URL with http://10.100.6.15
 odpVersion: "3.3.6.0-1"
-odpUrl: "https://mirror.odp.acceldata.dev/ODP/rhel/3.3.6.0-1/"          
+odpUrl: "http://10.100.6.15/ODP/rhel/3.3.6.0-1/"          
 jdkVersion: "11"                         # 8 or 11
 kerberos: "Yes"                           # Yes or No
+
+resources:
+  requests:
+    cpu: "1"
+    memory: "2Gi"
+  limits:
+    cpu: "4"
+    memory: "12Gi"
+
+
