--- a/sample_Values.yml
+++ b/sample_Values.yml
@@ -5,20 +5,20 @@
 #
 #For Rocky 8 
 #Python2 : sehajsandhu/odp_rl8_py2:v1
-#Python3 : sehajsandhu/odp_rl8_py311:v1
+#Python3 : sehajsandhu/odp_rl8_py311:v2
 #
 #For ubuntu 20
 #Python2 : sehajsandhu/odp_ub20_py2:v1
 #Python3 : sehajsandhu/odp_ub20_py311:v1
 
 
-image: sehajsandhu/odp_rl8_py311:v1
+image: sehajsandhu/odp_rl8_py311:v2
 nodes: 3                               # Upto 4 nodes
 components: ""                         # "AMBARI,HDFS,ZOOKEEPER,YARN,MAP-REDUCE,INFRA-SOLR,HIVE,TEZ,HBASE,SQOOP,RANGER,RANGER-KMS,DRUID,SPARK2,OOZIE"
 ambariVersion: "2.7.9.0-1"
-ambariUrl: "http://10.100.6.15/ODP/rhel/Ambari-2.7.9.0-1/"      ## KEEP IN MIND TO REPLACE https://MIRROR URL with http://10.100.6.15
+ambariUrl: "https://mirror.odp.acceldata.dev/ODP/rhel/Ambari-2.7.9.0-1/"     
 odpVersion: "3.3.6.0-1"
-odpUrl: "http://10.100.6.15/ODP/rhel/3.3.6.0-1/"          
+odpUrl: "https://mirror.odp.acceldata.dev/ODP/rhel/3.3.6.0-1/"          
 utilsUrl: ""
 jdkVersion: "11"                         # 8 or 11
 kerberos: "Yes"                           # Yes or No
