added latest image tags

--- a/sample_Values.yml
+++ b/sample_Values.yml
@@ -1,25 +1,26 @@
 # There are 4 images
 # Please use the one required by your ODP release
 #For Rocky 9
-#Python3 : sehajsandhu/odp_rl9_py311:v5
+#Python3 : sehajsandhu/odp_rl9_py311:latest
+#Python3 wrap img: sehajsandhu/rl9_py3_wrap:latest
 #
 #For Rocky 8 
-#Python2 : sehajsandhu/odp_rl8_py2:v1
-#Python3 : sehajsandhu/odp_rl8_py311:v4
+#Python2 : sehajsandhu/odp_rl8_py2:latest
+#Python3 : sehajsandhu/odp_rl8_py311:latest
 #
 #For ubuntu 20
-#Python2 : sehajsandhu/odp_ub20_py2:v1
-#Python3 : sehajsandhu/odp_ub20_py311:v1
+#Python2 : sehajsandhu/odp_ub20_py2:latest
+#Python3 : sehajsandhu/odp_ub20_py311:latest
 
 
-image: sehajsandhu/odp_rl8_py311:v4
+image: sehajsandhu/odp_rl8_py311:latest
 nodes: 3                               # Upto 4 nodes
 components: ""                         # "AMBARI,HDFS,ZOOKEEPER,YARN,MAP-REDUCE,INFRA-SOLR,HIVE,TEZ,HBASE,SQOOP,RANGER,RANGER-KMS,DRUID,SPARK2,OOZIE"
 ambariVersion: "2.7.9.0-1"
 ambariUrl: "https://mirror.odp.acceldata.dev/ODP/rhel/Ambari-2.7.9.0-1/"     
 odpVersion: "3.3.6.0-1"
 odpUrl: "https://mirror.odp.acceldata.dev/ODP/rhel/3.3.6.0-1/"          
-utilsUrl: ""
+utilsUrl: "https://mirror.odp.acceldata.dev/ODP/centos/ODP-UTILS-1.1.0.22/centos8/"
 jdkVersion: "11"                         # 8 or 11
 kerberos: "Yes"                           # Yes or No
 
